refactor: unify exception responses
