# common/src/main/java/com/authzservice/common/base/dto/ErrorResponse.java
@@ -1,7 +1,0 @@
-package com.authzservice.common.base.dto;
-
-public record ErrorResponse(
-        int code,
-        String message
-) {
-}
